--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Keith Laidlaw: Front End Developer & Web Producer </title>
+    <title>JENNY LAIDLAW Contemporary Jewellery</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet"> 
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100..700;1,100..700&family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">    
     <!--[if lt IE 9]>
     <script>
       'article aside header footer main nav section figure figcaption time'.replace(/\w+/g,function(n){document.createElement(n)})
@@ -21,41 +22,41 @@
 
       <header class="page-header">
         <h1>
-          <span class="head-name">Keith Laidlaw</span>
-          <span class="head-description">Front end developer and <span class="nowrap">web producer</span></span>
+          <span class="head-name">Jenny Laidlaw</span>
+          <span class="head-description">Contemporary Jewellery</span>
         </h1>
       </header>
 
       <main class="page-main">
 
         <section class="page-section bio" id="bio">
-          <h2>About me</h2>
-          <p>I'm an experienced front end developer and web producer fluent in HTML5/CSS3, JavaScript/jQuery, and WordPress/PHP. <span class="nowrap">I turn</span> raw ideas into beautiful, <span class="nowrap">accessible websites.</span></p>
+          <h2>About</h2>
+          <p>Captivated by ideas of time and memory Jenny Laidlaw embraces the beauty of the imperfect, impermanent and incomplete in her jewellery. Working predominantly with silver, gold and gemstones, she creates intricate structures that reflect the fragility <span class="nowrap">of nature.</span>
         </section>
 
         <section class="page-section contacts" id="contacts">
           <h2>Contact</h2>
 
           <div class="contact-buttons">		
-            <a href="http://www.linkedin.com/in/keithlaidlaw">
-              <img src="images/linkedin-120-circle.png" alt="LinkedIn" title="LinkedIn">
+            <a href="https://instagram.com/jenny_laidlaw">
+              <img src="images/instagram-120-circle.png" alt="Instagram" title="Instagram">
             </a>
-            <a href="https://github.com/nicetrousers">
-              <img src="images/github-120.png" alt="GitHub logo" title="GitHub" >
+            <a href="https://www.facebook.com/JennyLaidlawJewellery">
+              <img src="images/facebook-120-circle.png" alt="Facebook" title="Facebook" >
             </a>
-            <a href="https://bsky.app/profile/nicetrousers.bsky.social">
+            <!-- <a href="https://bsky.app/profile/nicetrousers.bsky.social">
               <img src="images/bluesky-120-circle.png" alt="Bluesky" title="Bluesky">
-            </a>
-            <a href="mailto:mail@keithlaidlaw.com" target="_blank">
+            </a> -->
+            <!-- <a href="mailto:jenny_laidlaw@hotmail.com" target="_blank">
               <img src="images/email-120-circle-gray.png" alt="Email me" title="Email me">  
-            </a>
+            </a> -->
           </div>
         </section>
 
-        <section class="page-section resume" id="resume">
+        <!-- <section class="page-section resume" id="resume">
           <h2>My resume</h2>
-          <p><a href="files/Keith-Laidlaw-Resume.pdf" target="_blank" class="resume-link">PDF format (opens in new window)</a></p>
-        </section>
+          <p><a href="files/Jenny-Laidlaw-Resume.pdf" target="_blank" class="resume-link">PDF format (opens in new window)</a></p>
+        </section> -->
 
       </main>
 
