Add logo to index page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <header class="page-header">
         <h1>
           <span class="head-name">Jenny Laidlaw</span>
+          <img src="images/logo-lines.png" alt="" class="logo-lines">
           <span class="head-description">Contemporary Jewellery</span>
         </h1>
       </header>
